# sobevy

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: default.assets.ron  default.settings.ron
src/: lib.rs  main.rs  util.rs
src/plugins/: assets.rs  input.rs  mod.rs  settings.rs
src/resources/: assets.rs  mod.rs  settings.rs
src/states/: mod.rs
