[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_wasm_window_resize = "0.2.1"
serde = "1"
leafwing-input-manager = "0.11"
bevy_common_assets = { version = "0.8", features = ["ron"] }
bevy_asset_loader = { version = "0.18", features = [
    "2d",
    "3d",
    "standard_dynamic_assets",
] }

# # For physics
# bevy_xpbd_3d = "0.3"

# # For egui projects
# bevy_egui = "0.23.0"
# bevy-egui-kbgp = "0.16.0"
# egui_extras = { version = "0.23.0", features = ["file", "image"] }
# image = { version = "0.24", features = ["png"] }
# bevy-inspector-egui = "0.21"
