[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["serialize"], default-features = true }
bevy_wasm_window_resize = "0.3"
serde = "1"
leafwing-input-manager = "0.13"
bevy_common_assets = { version = "0.10", features = ["ron"] }
bevy_asset_loader = { version = "0.20", features = [
    "2d",
    "3d",
    "standard_dynamic_assets",
] }

# # For physics
# bevy_xpbd_3d = "*"

# # For egui projects
# bevy_egui = "*"
# bevy-egui-kbgp = "*"
# egui_extras = { version = "*", features = ["file", "image"] }
# image = { version = "*", features = ["png"] }
# bevy-inspector-egui = "*"
